apps/base/it-tools/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: it-tools
spec:
  ports:
    - port: 8080
  selector:
    app: it-tools
  type: ClusterIP
