apps/base/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
spec:
  ingressClassName: traefik
  rules:
  - host: "it-tools.kubeklepsch.com"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: it-tools
            port:
              number: 8080
